--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                         <p class="wep" data-splitting="">From Concept To Conversion</p>
                     </div>
                 </div>
-                <div class="lapi-d">
+                <div class="lapi-d" data-bgcolor="#000">
                     <div class="lapi-content">
                         <video width="100%" height="100%" autoplay="" loop="" muted="" playsinline=""
                             style="user-select: auto;">
