--- a/index.html
+++ b/index.html
@@ -685,8 +685,7 @@
                     </div>
                 </div>
                 <div class="lapi-d" data-bgcolor="#000">
-                    <video width="100%" height="100%" autoplay="" loop="" muted="" playsinline=""
-                        style="user-select: auto;">
+                    <video autoplay="" loop="" muted="" playsinline="" style="user-select: auto;">
                         <source src="/assets/resources/s.mp4" type="video/mp4" style="user-select: auto;">
                     </video>
                     <div class="lapi-content">
