--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
                 <div class="hero-section" data-cursor="-color-whites">
-                    <div class="container_hero" data-bgcolor="#000" data-humcolor="#ffffff">
+                    <div class="container_hero" data-humcolor="#ffffff">
                         <div id="noise"></div>
                         <div class="container_hero_content">
 
