--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                                             <div class="macbook_frame_content_upper">
                                             </div>
                                             <video width="100%" height="100%" autoplay loop muted playsinline>
-                                                <source src="/assets/resources/a.mp4" type="video/mp4">
+                                                <source src="/assets/resources/s.mp4" type="video/mp4">
                                             </video>
                                             <div class="macbook_frame_background"></div>
                                         </div>
@@ -684,7 +684,7 @@
                         <p class="wep" data-splitting="">From Concept To Conversion</p>
                     </div>
                 </div>
-                <div class="lapi-d" data-bgcolor="#000">
+                <div class="lapi-d w-hde" data-bgcolor="#000">
                     <video autoplay="" loop="" muted="" playsinline="" style="user-select: auto;">
                         <source src="/assets/resources/s.mp4" type="video/mp4" style="user-select: auto;">
                     </video>
