--- a/about.html
+++ b/about.html
@@ -2002,7 +2002,7 @@
                                 style="background-image: url('/assets/resources/img/22_our_clients.963f5192.gif');">
                             </div>
                         </h2>
-                        <div class="grid-logo" data-scroll data-scroll-direction="horizontal" data-scroll-speed="12">
+                        <div class="grid-logo">
                             <div class="logo-item">
                                 <img src="/assets/resources/img/logo/logo01.png" alt="logo" />
                             </div>
