--- a/index.html
+++ b/index.html
@@ -615,6 +615,8 @@
                         </div>
                     </div>
                     <div class="mobli-cont mobl">
+                        <div class="en-bg"></div>
+                        <div class="en-cicle"></div>
                         <div class="mobli-cont_content">
                             <p class="wep" data-splitting="">From Concept To Conversion</p>
                         </div>
