--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                                             <div class="macbook_frame_content_upper">
                                             </div>
                                             <video width="100%" height="100%" autoplay loop muted playsinline>
-                                                <source src="/assets/resources/s.mp4" type="video/mp4">
+                                                <source src="/assets/resources/a.mp4" type="video/mp4">
                                             </video>
                                             <div class="macbook_frame_background"></div>
                                         </div>
