--- a/index.html
+++ b/index.html
@@ -620,6 +620,10 @@
                         <div class="mobli-cont_content">
                             <p class="wep" data-splitting="">From Concept To Conversion</p>
                         </div>
+                        <div class="lapi-content">
+
+                            <p class="wor" data-splitting="">We're Changing The Face of Web</p>
+                        </div>
                     </div>
                     <!-- thrid scroll -->
                     <div class="transition_to_lapi m-hide"></div>
@@ -647,6 +651,15 @@
                             </div>
                         </div>
                     </div>
+                    <!-- <div class="lapi-d w-hde" data-bgcolor="#000">
+                        <video autoplay="" loop="" muted="" playsinline="" style="user-select: auto;">
+                            <source src="/assets/resources/a.mp4" type="video/mp4" style="user-select: auto;">
+                        </video>
+                        <div class="lapi-content">
+    
+                            <p class="wor" data-splitting="">We're Changing The Face of Web</p>
+                        </div>
+                    </div> -->
                     <!-- split -->
                     <div class="o-page-tail_inner m-hide">
                         <div class="c-hm-us">
@@ -687,15 +700,7 @@
                 <!-- second scroll -->
 
 
-                <div class="lapi-d w-hde" data-bgcolor="#000">
-                    <video autoplay="" loop="" muted="" playsinline="" style="user-select: auto;">
-                        <source src="/assets/resources/a.mp4" type="video/mp4" style="user-select: auto;">
-                    </video>
-                    <div class="lapi-content">
 
-                        <p class="wor" data-splitting="">We're Changing The Face of Web</p>
-                    </div>
-                </div>
 
                 <!-- section scrolll -->
                 <div class="works__inner" data-bgcolor="#000" data-humcolor="#fff" data-cursor="-color-whites">
