--- a/index.html
+++ b/index.html
@@ -700,7 +700,42 @@
                 <!-- second scroll -->
 
 
+                <!-- split -->
+                <div class="o-page-tail_inner">
+                    <div class="c-hm-us">
+                        <div class="o-container">
+                            <div class="c-hm-us_top">
+                                <div class="o-media o-media1 hm-us">
+                                    <div data-loop="true" data-wf-ignore="true"
+                                        class="o-media_obj w-background-video w-background-video-atom">
+                                        <video autoplay="" loop="" style="background-image:url" muted="" playsinline=""
+                                            data-wf-ignore="true" data-object-fit="cover">
+                                            <source src="/assets/resources/left.mp4" data-wf-ignore="true">
+                                        </video>
+                                    </div>
+                                </div>
+                                <div class="c-hm-us_s2">
+                                    <h4 class="t-lead">Ready To Explore How<br> We Can Work Together<br> To Create
+                                        Something <br>Extraordinary?</h4>
+                                    <div class="c-hm-us_title">
+                                        <h2 class="t-d3-fluid cta" data-magnetic data-cursor="-opaque"> <a><span>
+                                                    Say, Hello! 👋
+                                                </span></a> </h2>
+                                    </div>
 
+                                </div>
+                                <div class="o-media o-media2 hm-us">
+                                    <div class="o-media_obj w-background-video w-background-video-atom">
+                                        <video autoplay="" loop="" style="background-image:url" muted="" playsinline=""
+                                            data-wf-ignore="true" data-object-fit="cover">
+                                            <source src="/assets/resources/right.mp4" data-wf-ignore="true">
+                                        </video>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <!-- section scrolll -->
                 <div class="works__inner" data-bgcolor="#000" data-humcolor="#fff" data-cursor="-color-whites">
