--- a/blog2.html
+++ b/blog2.html
@@ -321,11 +321,11 @@
         </div>
 <div class="footer-flex">
     <div class="footer-right">
-       <a class="cb-outro-social-item" data-cursor="-opaque" href="works.html"><span class="cb-outro-social-item-title"><span data-text="Portfolio">Portfolio</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="career.html"><span class="cb-outro-social-item-title"><span data-text="Career">Career</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="blogs.html"><span class="cb-outro-social-item-title"><span data-text="Blog">Blog</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span class="cb-outro-social-item-title"><span data-text="About">About</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="services.html"><span class="cb-outro-social-item-title"><span data-text="Services">Services</span></span></a>
+        <a class="cb-outro-social-item"  data-cursor="-opaque" href="works.html"  ><span class="cb-outro-social-item-title"><span data-text="Work">Work</span></span></a>
+        <a class="cb-outro-social-item"  data-cursor="-opaque" href="" ><span class="cb-outro-social-item-title"><span data-text="Career">Career</span></span></a>
+        <a class="cb-outro-social-item"  data-cursor="-opaque" href="blogs.html"  ><span class="cb-outro-social-item-title"><span data-text="Blog">Blog</span></span></a>
+        <a class="cb-outro-social-item"  data-cursor="-opaque" href="about.html"  ><span class="cb-outro-social-item-title"><span data-text="About">About</span></span></a>
+        <a class="cb-outro-social-item"  data-cursor="-opaque" href=""  ><span class="cb-outro-social-item-title"><span data-text="Portfolio">Portfolio</span></span></a>
       </div>
     <div class="footer-left">
         <div class="botom">
