--- a/blogs.html
+++ b/blogs.html
@@ -190,20 +190,20 @@
                             Expertises
                          </div>
                       </a>
-                      <div class="Menu-subnav">
-                            <div class="sub-nav">
-                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="services-details.html"><span class="cb-outro-social-item-title"><span data-text="Strategy">Strategy</span></span></a>
-                            </div>
-                            <div class="sub-nav">
-                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="services-details.html"><span class="cb-outro-social-item-title"><span data-text="Design">Design</span></span></a>
-                            </div>
-                            <div class="sub-nav">
-                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="services-details.html"><span class="cb-outro-social-item-title"><span data-text="Development">Development</span></span></a>
-                            </div>
-                            <div class="sub-nav">
-                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="services-details.html"><span class="cb-outro-social-item-title"><span data-text="Marketing">Marketing</span></span></a>
-                            </div>
-                        </div>
+                      <div class="Menu-subnav" >
+                         <div class="sub-nav">
+                            <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="blogs.html"><span class="cb-outro-social-item-title"><span data-text="Strategy">Strategy</span></span></a>
+                         </div>
+                         <div class="sub-nav">
+                            <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="blogs.html"><span class="cb-outro-social-item-title"><span data-text="Design">Design</span></span></a>
+                         </div>
+                         <div class="sub-nav">
+                            <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="blogs.html"><span class="cb-outro-social-item-title"><span data-text="Development">Development</span></span></a>
+                         </div>
+                         <div class="sub-nav" >
+                            <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="blogs.html"><span class="cb-outro-social-item-title"><span data-text="Marketing">Marketing</span></span></a>
+                         </div>
+                      </div>
                    </div>
                    <div class="navItem" data-cursor="-opaque" data-cursor-stick="#nav3">
                       <div class="nav-num" ><span >03</span></div>
@@ -436,11 +436,11 @@
         </div>
 <div class="footer-flex">
     <div class="footer-right">
-       <a class="cb-outro-social-item" data-cursor="-opaque" href="works.html"><span class="cb-outro-social-item-title"><span data-text="Portfolio">Portfolio</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="career.html"><span class="cb-outro-social-item-title"><span data-text="Career">Career</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="blogs.html"><span class="cb-outro-social-item-title"><span data-text="Blog">Blog</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span class="cb-outro-social-item-title"><span data-text="About">About</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="services.html"><span class="cb-outro-social-item-title"><span data-text="Services">Services</span></span></a>
+        <a class="cb-outro-social-item"  data-cursor="-opaque" href="works.html"  ><span class="cb-outro-social-item-title"><span data-text="Work">Work</span></span></a>
+        <a class="cb-outro-social-item"  data-cursor="-opaque" href="" ><span class="cb-outro-social-item-title"><span data-text="Career">Career</span></span></a>
+        <a class="cb-outro-social-item"  data-cursor="-opaque" href="blogs.html"  ><span class="cb-outro-social-item-title"><span data-text="Blog">Blog</span></span></a>
+        <a class="cb-outro-social-item"  data-cursor="-opaque" href="about.html"  ><span class="cb-outro-social-item-title"><span data-text="About">About</span></span></a>
+        <a class="cb-outro-social-item"  data-cursor="-opaque" href=""  ><span class="cb-outro-social-item-title"><span data-text="Portfolio">Portfolio</span></span></a>
       </div>
     <div class="footer-left">
         <div class="botom">
