--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
 
 
                 <!-- split -->
-                <!-- <div class="o-page-tail_inner">
+                <div class="o-page-tail_inner">
                     <div class="c-hm-us">
                         <div class="o-container">
                             <div class="c-hm-us_top">
@@ -735,7 +735,7 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <!-- section scrolll -->
                 <div class="works__inner" data-bgcolor="#000" data-humcolor="#fff" data-cursor="-color-whites">
