--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
 
 
                 <!-- split -->
-                <div class="o-page-tail_inner">
+                <div class="m-page-tail_inner w-hde">
                     <div class="c-hm-us">
                         <div class="o-container">
                             <div class="c-hm-us_top">
