--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home page</title>
+    <link href="https://unpkg.com/swiper/swiper-bundle.min.css" type="text/css" rel="stylesheet">
     <link href="assets/resources/styles/css/page.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -988,7 +989,7 @@
                 </section>
 
                 <!-- portfilio -->
-                <section class="portfolio" data-bgcolor="#000" data-humcolor="#fff" data-cursor="-color-whites">
+                <section class="portfolio m-hide" data-bgcolor="#000" data-humcolor="#fff" data-cursor="-color-whites">
                     <div class="back">
                         <span> Works </span>
                     </div>
@@ -1059,7 +1060,57 @@
                     </div>
                 </section>
                 <!-- end -->
-
+                <section class="section-container mob-port w-hde">
+                    <div class="mobile-container image-1">
+                        <div class="slider-element-container">
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port">
+                                                <img src="/assets/resources/img/01-patronum.png">
+                                                <h2><span>01</span>Patronum</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port">
+                                                <img src="/assets/resources/img/03-certvault.png">
+                                                <h2><span>02</span>Certvault</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port">
+                                                <img src="/assets/resources/img/04-bespin.png">
+                                                <h2><span>03</span>Bespin</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port">
+                                                <img src="/assets/resources/img/05-quickx.png">
+                                                <h2><span>04</span>Quickx</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port">
+                                                <img src="/assets/resources/img/06-dmtca.png">
+                                                <h2><span>05</span>Dmtca</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <!-- footer -->
                 <footer id="footer">
                     <div class="f-container">
@@ -1351,6 +1402,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="assets/resources/js/page.js"></script>
 
