--- a/about.html
+++ b/about.html
@@ -2064,7 +2064,7 @@
                                     Great Together
                                     <div class="arow">
                                         <img
-                                            src="https://www.weareenigma.com/enigma-new/assets/resources/img/get-arrow.svg" />
+                                            src="/assets/resources/img/get-arrow.svg" />
                                     </div>
                                 </a>
                             </div>
