--- a/blog-details2.html
+++ b/blog-details2.html
@@ -343,7 +343,7 @@
                                 <a class="great-cta" href="" id="cursor-stick-area"> 
                     Great Together
               <div class="arow">
-                  <img src="https://www.weareenigma.com/enigma-new/assets/resources/img/get-arrow.svg"/>
+                  <img src="/assets/resources/img/get-arrow.svg"/>
               </div>
                 </a>
                             </div>
