--- a/about.html
+++ b/about.html
@@ -283,6 +283,7 @@
             <div class="wrapper">
                 <!--top  Section-->
                 <section class="black-bg about-us-section" data-bgcolor="#000" data-humcolor="#fff">
+                    <div style="background-image:url('/assets/resources/img/gradient-bg.png')"></div>
                     <div class="about-us-inner d-flex" id="scroll-direction">
                         <div id="test"></div>
                         <div class="about-us-image" data-scroll data-scroll-sticky
@@ -292,21 +293,35 @@
                         <div class="about-us-content">
                             <div class="welcome-heading d-flex justify-content-sb align-items-start">
                                 <h1 data-textcolor="#000" style="color:#fff;"> <span class="opacity-0" data-scroll
-                                        data-scroll-delay="0.1" data-scroll-offset="60">Born in</span><br /> <span
+                                        data-scroll-delay="0.1" data-scroll-offset="60">Enigma is </span><br /> <span
                                         class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60"><em>2017,</em></span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">Enigma is an
+                                        data-scroll-offset="60"><em>a collective</em></span><br /> <span
+                                        class="opacity-0" data-scroll data-scroll-delay="0.1" data-scroll-offset="60">of
+                                        Creators,
                                     </span><br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">amalgamation </span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">of a design
+                                        data-scroll-offset="60">Discoverers, Dreamers </span><br /> <span
+                                        class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">and Doers!
                                     </span><br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">studio, a </span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60"><em>marketing agency
+                                        data-scroll-offset="60">We operate </span><br /> <span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60"><em>at the
                                             &</em></span>
                                     <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">a technology </span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">company.
-                                    </span><br />
+                                        data-scroll-offset="60">intersection of design,</span><br /> <span
+                                        class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">consumer psychology,
+                                    </span>
+
+                                    <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">technology &</span><br /> <span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">marketing to create
+                                    </span>
+                                    <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">digital brand</span><br /> <span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">experiences for the
+                                    </span>
+                                    <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">web of tomorrow.</span><br />
                                 </h1>
                             </div>
 
@@ -2063,8 +2078,7 @@
                                 <a class="great-cta" href="" id="cursor-stick-area">
                                     Great Together
                                     <div class="arow">
-                                        <img
-                                            src="/assets/resources/img/get-arrow.svg" />
+                                        <img src="/assets/resources/img/get-arrow.svg" />
                                     </div>
                                 </a>
                             </div>
