--- a/about.html
+++ b/about.html
@@ -282,8 +282,9 @@
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
                 <!--top  Section-->
-                <section class="black-bg about-us-section" data-bgcolor="#000" data-humcolor="#fff">
-                    <div style="background-image:url('/assets/resources/img/gradient-bg.png')"></div>
+                <section class="black-bg about-us-section" data-humcolor="#000"
+                    style="background-image:url('/assets/resources/img/16.jpg')">
+
                     <div class="about-us-inner d-flex" id="scroll-direction">
                         <div id="test"></div>
                         <div class="about-us-image" data-scroll data-scroll-sticky
@@ -291,37 +292,42 @@
                                 src="/assets/resources/img/about.gif" alt="" title="" />
                         </div>
                         <div class="about-us-content">
-                            <div class="welcome-heading d-flex justify-content-sb align-items-start">
-                                <h1 data-textcolor="#000" style="color:#fff;"> <span class="opacity-0" data-scroll
-                                        data-scroll-delay="0.1" data-scroll-offset="60">Enigma is </span><br /> <span
-                                        class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60"><em>a collective</em></span><br /> <span
-                                        class="opacity-0" data-scroll data-scroll-delay="0.1" data-scroll-offset="60">of
+                            <div class="welcome-heading d-flex justify-content-sb align-items-start flex-w">
+                                <h1 data-textcolor="#000" style="color:#000;"> <span class="opacity-0" data-scroll
+                                        data-scroll-delay="0.1" data-scroll-offset="60">Enigma is a collective
+                                        of</span>
+                                </h1>
+                                <h1 data-textcolor="#000" style="color:#000;"> <span class="opacity-0" data-scroll
+                                        data-scroll-delay="0.1" data-scroll-offset="60">
                                         Creators,
                                     </span><br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">Discoverers, Dreamers </span><br /> <span
-                                        class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">and Doers!
-                                    </span><br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">We operate </span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60"><em>at the
-                                            &</em></span>
+                                        data-scroll-offset="60">Discoverers,</span><br />
+                                    <span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">Dreamers &</span><br />
+                                    <span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">Doers!
+                                    </span>
+                                </h1>
+                                <h1 data-textcolor="#000" style="color:#000;"> <span class="opacity-0" data-scroll
+                                        data-scroll-delay="0.1" data-scroll-offset="60">We operate at the</span><br />
+                                    <span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60"><em>intersection of
+                                            design,</em></span>
                                     <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">intersection of design,</span><br /> <span
+                                        data-scroll-offset="60">consumer psychology,</span><br /> <span
                                         class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">consumer psychology,
+                                        data-scroll-offset="60">technology &
                                     </span>
 
                                     <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">technology &</span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">marketing to create
+                                        data-scroll-offset="60">marketing to create</span><br /> <span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">digital brand
                                     </span>
                                     <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">digital brand</span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">experiences for the
+                                        data-scroll-offset="60">experiences for the</span><br /> <span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">web of tomorrow.
                                     </span>
-                                    <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">web of tomorrow.</span><br />
+                                    <br />
                                 </h1>
                             </div>
 
