--- a/about.html
+++ b/about.html
@@ -385,7 +385,7 @@
                                     <img src="/assets/resources/img/why-us.svg" alt="" />
                                     <div>
                                         <div class="flex text_anim">
-                                            <div class="left-con">
+                                            <div class="left-con text_anim">
                                                 <h4><span>/01</span></h4>
                                             </div>
                                             <div class="right-con">
@@ -442,7 +442,7 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="flex ">
+                                        <div class="flex text_anim">
                                             <div class="left-con">
                                                 <h4><span>/05</span></h4>
                                             </div>
@@ -461,7 +461,7 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="flex ">
+                                        <div class="flex text_anim">
                                             <div class="left-con">
                                                 <h4><span>/06</span></h4>
                                             </div>
@@ -488,12 +488,14 @@
 
                 <!-- Team Sec -->
                 <div class="grdient" style="background: linear-gradient(1deg, #090e26, #031554);">
-                    <img class="bg-team" src="/assets/resources/img/our-team.png" alt="">
-                    <section class="team-s" data-humcolor="#fff">
-                        <div class="container">
+                    <!-- <img class="bg-team" src="/assets/resources/img/our-team.png" alt="">
+                    <section class="team-s" data-humcolor="#fff" data-scroll>
+                        <div class="container text_anim">
                             <h2 class="he"><span>Our Team</span></h2>
-                            <p class="parh">It’s not about what we tell you or where we come from or who we are, but
-                                what we do every day that defines us!</p>
+                            <p class="parh"><span>
+                                    It’s not about what we tell you or where we come from or who we are, but
+                                    what we do every day that defines us!
+                                </span></p>
                         </div>
                     </section>
                     <section id="sectionPin">
@@ -2074,16 +2076,16 @@
                                 </div>
                             </div>
                         </div>
-                    </section>
+                    </section> -->
                     <!-- About Logos -->
-                    <section class="client-section" data-humcolor="#fff">
+                    <section class="client-section" data-humcolor="#fff" data-scroll>
 
                         <div class="concept" data-scroll>
                             <figure data-scroll data-scroll-speed="1">
                                 <img class="bg-team" src="/assets/resources/img/our-team.png" alt="">
                             </figure>
                         </div>
-                        <div class="container">
+                        <div class="container text_anim">
                             <h2 id="clint">CLIENTS LOVE US!
                                 <audio id="beep-one" controls="controls" preload="auto">
                                     <source src="/client.mp3">
@@ -2095,37 +2097,40 @@
                                 </div>
                             </h2>
                             <p class="parh">
-                                It’s not just the eminence & superior quality of our work. It’s our attitude, our
-                                approach, our meticulous attention to detail, our ability to understand their business &
-                                their goals, and most of all, it’s the way we treat our clients – They walk in as
-                                clients and stay as friends!
-                                <br>
-                                That’s why we say, we don’t work for clients, we work with our friends.
+                                <span>
+                                    It’s not just the eminence & superior quality of our work. It’s our attitude, our
+                                    approach, our meticulous attention to detail, our ability to understand their
+                                    business &
+                                    their goals, and most of all, it’s the way we treat our clients – They walk in as
+                                    clients and stay as friends!
+                                    <br>
+                                    That’s why we say, we don’t work for clients, we work with our friends.
+                                </span>
                             </p>
                             <div class="grid-logo">
                                 <div class="logo-item">
-                                    <img src="/assets/resources/img/logo/logo01.png" alt="logo" />
+                                    <img src="/assets/resources/img/logo/logo01.svg" alt="logo" />
                                 </div>
                                 <div class="logo-item">
-                                    <img src="/assets/resources/img/logo/logo02.png" alt="logo" />
+                                    <img src="/assets/resources/img/logo/logo02.svg" alt="logo" />
                                 </div>
                                 <div class="logo-item">
-                                    <img src="/assets/resources/img/logo/logo03.png" alt="logo" />
+                                    <img src="/assets/resources/img/logo/logo03.svg" alt="logo" />
                                 </div>
                                 <div class="logo-item">
-                                    <img src="/assets/resources/img/logo/logo04.png" alt="logo" />
+                                    <img src="/assets/resources/img/logo/logo04.svg" alt="logo" />
                                 </div>
                                 <div class="logo-item">
-                                    <img src="/assets/resources/img/logo/logo05.png" alt="logo" />
+                                    <img src="/assets/resources/img/logo/logo05.svg" alt="logo" />
                                 </div>
                                 <div class="logo-item">
-                                    <img src="/assets/resources/img/logo/logo06.png" alt="logo" />
+                                    <img src="/assets/resources/img/logo/logo06.svg" alt="logo" />
                                 </div>
                                 <div class="logo-item">
-                                    <img src="/assets/resources/img/logo/logo07.png" alt="logo" />
+                                    <img src="/assets/resources/img/logo/logo07.svg" alt="logo" />
                                 </div>
                                 <div class="logo-item">
-                                    <img src="/assets/resources/img/logo/logo08.png" alt="logo" />
+                                    <img src="/assets/resources/img/logo/logo08.svg" alt="logo" />
                                 </div>
                             </div>
                         </div>
@@ -2134,22 +2139,22 @@
                     <section class="marquees" style="background: transparent;">
                         <div class="marquees__inner" aria-hidden="true" ref="inner">
                             <div class="marquees__part">
-                                WANT TO WORK WITH US?
+                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
                             </div>
                             <div class="marquees__part">
-                                WANT TO WORK WITH US?
+                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
                             </div>
                             <div class="marquees__part">
-                                WANT TO WORK WITH US?
+                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
                             </div>
                             <div class="marquees__part">
-                                WANT TO WORK WITH US?
+                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
                             </div>
                             <div class="marquees__part">
-                                WANT TO WORK WITH US?
+                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
                             </div>
                             <div class="marquees__part">
-                                WANT TO WORK WITH US?
+                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
                             </div>
                         </div>
                     </section>
